PR/53206: David Binderman: fix array bounds comparison in KASSERT.